# template-filler-v2

./: .gitignore  .pre-commit-config.yaml  .yamllint  README.md  constraints.txt  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: pre-commit.yml  tests.yml
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: FileUploader.tsx
template_filler/: __about__.py  api.py  data_loading.py  word_filler.py
tests/: conftest.py  test_data_loading.py  test_word_filler.py
